fixes a bug where the comment count in the blog articles’ header shifts in Gecko.

--- a/frontend/ui/arboreal.styles/_arboreal.style.pages.blog.scss
+++ b/frontend/ui/arboreal.styles/_arboreal.style.pages.blog.scss
@@ -649,6 +649,9 @@
 
 						text-align: center;
 						position: relative;
+						
+						vertical-align: bottom;
+						baseline-shift: 4px;
 					
 					}
 				
